📋 Add complete admin panel status documentation

--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="PanelX - IPTV Management Panel" />
-    <title>PanelX - Dashboard</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="description" content="PanelX V3.0.0 PRO - Professional IPTV Management Panel" />
+    <title>PanelX V3.0.0 PRO - Admin Dashboard</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
